# cpp_tempalte_lib

./: CMakeLists.txt
.github/workflows/: ci.yml
template_lib/: CMakeLists.txt
template_lib/include/: template.h
template_lib/src/: template.cpp
test_template/: CMakeLists.txt  test.cpp
